# CBDC

./: go.mod  go.sum  main.go  settings.gradle  toAndroid.sh  toiOS.sh
CBDC/: CBDCApp.swift  ContentView.swift  GoCBDCView.swift
CBDC.xcodeproj/: project.pbxproj
CBDC.xcodeproj/project.xcworkspace/xcuserdata/hunterchan.xcuserdatad/: UserInterfaceState.xcuserstate
CBDC.xcodeproj/xcuserdata/hunterchan.xcuserdatad/xcschemes/: xcschememanagement.plist
CBDC/GoCBDC.xcframework/: Info.plist
CBDC/GoCBDC.xcframework/ios-arm64/GoCBDC.framework/Versions/A/Headers/: GoCBDC.h  GoCBDC.objc.h
CBDC/GoCBDC.xcframework/ios-arm64_x86_64-simulator/GoCBDC.framework/: GoCBDC
CBDC/GoCBDC.xcframework/ios-arm64_x86_64-simulator/GoCBDC.framework/Versions/A/Modules/: module.modulemap
GoCBDC/: GoCBDC.go
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/cdbcapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/cdbcapp/activity/: EnrollActivity.java  MainActivity.java  OfflineTxActivity.java
app/src/main/java/com/example/cdbcapp/libnative/: libnative.java
app/src/main/res/layout/: activity_enroll.xml  activity_main.xml  activity_offline_tx.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: strings.xml  themes.xml
app/src/test/java/com/example/cdbcapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jniLibs/arm64-v8a/: libgnark.h
macOS/: main  main.cpp
onlinetx/: online.go
